--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "expo-location": "~8.0.0",
-    "expo-font": "~8.0.0"
+    "expo-font": "~8.0.0",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
