--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^36.0.0",
+    "expo-font": "~8.0.0",
+    "expo-location": "~8.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
-    "expo-location": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "react-native-maps": "0.26.1"
+    "expo-image-picker": "~8.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
